{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 238,
  "lineage": "8e6fd202-5f0d-550c-283a-aaa0d7dbe0c5",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384548785571b8f4",
            "domain": "vpc",
            "id": "eipalloc-0384548785571b8f4",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-16-154-132.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.154.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:loadbalancer/net/test-lb-tf/65896d382c218638",
            "arn_suffix": "net/test-lb-tf/65896d382c218638",
            "dns_name": "test-lb-tf-65896d382c218638.elb.eu-north-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:loadbalancer/net/test-lb-tf/65896d382c218638",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-lb-tf",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0384548785571b8f4",
                "subnet_id": "subnet-0792c8e1f8456b872"
              }
            ],
            "subnets": [
              "subnet-0792c8e1f8456b872"
            ],
            "tags": {
              "Name": "Terraform-test",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-test",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "vpc_id": "vpc-08a944c2d785213f6",
            "zone_id": "Z1UDT6IFJ4EJM"
          },
          "dependencies": [
            "module.compute.aws_eip.lb",
            "module.compute.module.network.aws_subnet.tf",
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:listener/net/test-lb-tf/65896d382c218638/968f1e15d1d028d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:targetgroup/terraform-target-group/108f4f52c7604055",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:listener/net/test-lb-tf/65896d382c218638/968f1e15d1d028d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:loadbalancer/net/test-lb-tf/65896d382c218638",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_eip.lb",
            "module.compute.aws_lb.load_balancer",
            "module.compute.aws_lb_target_group.test",
            "module.compute.module.network.aws_subnet.tf",
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:targetgroup/terraform-target-group/108f4f52c7604055",
            "arn_suffix": "targetgroup/terraform-target-group/108f4f52c7604055",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:113304117666:targetgroup/terraform-target-group/108f4f52c7604055",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-target-group",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:internet-gateway/igw-0e076401570a71e82",
            "id": "igw-0e076401570a71e82",
            "owner_id": "113304117666",
            "tags": {
              "Name": "Terraform-gateway",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-gateway",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ee1d86e38d9fe0",
            "original_route_table_id": "rtb-0e352788504b77284",
            "route_table_id": "rtb-00878a67768cf873f",
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.tf",
            "module.compute.module.network.aws_route_table.tf",
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:route-table/rtb-00878a67768cf873f",
            "id": "rtb-00878a67768cf873f",
            "owner_id": "113304117666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e076401570a71e82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-route-table",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-route-table",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_internet_gateway.tf",
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:security-group/sg-0642ca20e4b287234",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0642ca20e4b287234",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "139.45.214.21/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230503135159218400000002",
            "name_prefix": "terraform-",
            "owner_id": "113304117666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-sec-group",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-sec-group",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:subnet/subnet-0792c8e1f8456b872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0792c8e1f8456b872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113304117666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-subnet",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-subnet",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "vpc_id": "vpc-08a944c2d785213f6"
          },
          "dependencies": [
            "module.compute.module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:vpc/vpc-08a944c2d785213f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07209c5489c8feb38",
            "default_route_table_id": "rtb-0e352788504b77284",
            "default_security_group_id": "sg-0f785d7480bdd264a",
            "dhcp_options_id": "dopt-985fc3f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a944c2d785213f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e352788504b77284",
            "owner_id": "113304117666",
            "tags": {
              "Name": "Terraform-vpc",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-vpc",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:internet-gateway/igw-0ba301404cc802e91",
            "id": "igw-0ba301404cc802e91",
            "owner_id": "113304117666",
            "tags": {
              "Name": "Terraform-gateway",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-gateway",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "vpc_id": "vpc-09814a083e089e103"
          },
          "dependencies": [
            "module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c07e235289a4b01",
            "original_route_table_id": "rtb-06fe6675b2bf2914e",
            "route_table_id": "rtb-01cceb039e5c7603c",
            "vpc_id": "vpc-09814a083e089e103"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf",
            "module.network.aws_route_table.tf",
            "module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:route-table/rtb-01cceb039e5c7603c",
            "id": "rtb-01cceb039e5c7603c",
            "owner_id": "113304117666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba301404cc802e91",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-route-table",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-route-table",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "timeouts": null,
            "vpc_id": "vpc-09814a083e089e103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.tf",
            "module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:security-group/sg-0bb920a5e2f3ea3e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb920a5e2f3ea3e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "139.45.214.21/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230503135159055500000001",
            "name_prefix": "terraform-",
            "owner_id": "113304117666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-sec-group",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-sec-group",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "timeouts": null,
            "vpc_id": "vpc-09814a083e089e103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:subnet/subnet-051b84dab6c7ed6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b84dab6c7ed6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113304117666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-subnet",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-subnet",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "vpc_id": "vpc-09814a083e089e103"
          },
          "dependencies": [
            "module.network.aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:113304117666:vpc/vpc-09814a083e089e103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec7027db4259e96c",
            "default_route_table_id": "rtb-06fe6675b2bf2914e",
            "default_security_group_id": "sg-02a34683fa6ce6d73",
            "dhcp_options_id": "dopt-985fc3f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09814a083e089e103",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fe6675b2bf2914e",
            "owner_id": "113304117666",
            "tags": {
              "Name": "Terraform-vpc",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            },
            "tags_all": {
              "Name": "Terraform-vpc",
              "Owner": "gavetisyan",
              "Project": "2023_internship_arm"
            }
          }
        }
      ]
    }
  ]
}